# equanimity

./: .gitignore  CMakeLists.txt  README.md
Source/: ComputationalGraph.h  Main.cpp  MultilayerPerceptron.h
Source/Neural/: MultilayerPerceptron.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkBuilder.cpp  NeuralNetworkBuilder.h  NeuralNetworkEngine.cpp  NeuralNetworkEngine.h  NeuralNetworkLayer.cpp  NeuralNetworkLayer.h  NeuralNetworkLayerBuilder.cpp  NeuralNetworkLayerBuilder.h
Source/Neural/Layers/: ActivationLayer.cpp  ActivationLayer.h  FullyConnectedLayer.cpp  FullyConnectedLayer.h  InputLayer.cpp  InputLayer.h  OutputLayer.cpp  OutputLayer.h  SigmoidActivationLayer.cpp  SigmoidActivationLayer.h
